fix: recaptcha creating weird spacing

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -25,7 +25,7 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 40px;
-    padding: 35px;
+    padding: 35px 0 35px 0;
 
     a {
         color: $p-color;
